--- a/index.ipynb
+++ b/index.ipynb
@@ -633,7 +633,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m_change=-1*learning_rate*cost_curve_slope\n",
+    "    m_change=*learning_rate*cost_curve_slope\n",
     "    return m_change+m\n",
     "    pass"
    ]
