--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    whilte cur\n",
+    "    while current_m\n",
     "    \n",
     "    pass"
    ]
