--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    while current_m != 0:\n",
+    "    cost_curve=[]\n",
+    "    \n",
     "        \n",
     "    \n",
     "    pass"
