--- a/index.ipynb
+++ b/index.ipynb
@@ -700,7 +700,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve=[]\n",
-    "    \n",
+    "    for i in range\n",
     "        \n",
     "    \n",
     "    pass"
